# substrate-eth-light-client

./: .gitignore  Cargo.toml  rustfmt.toml
.circleci/: config.yml
node/: Cargo.toml  build.rs
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/light-client/: Cargo.toml
pallets/light-client/data/: 2_rust_ethash.json
pallets/light-client/src/: blocks_queue.rs  constants.rs  lib.rs  mock.rs  prover.rs  tests.rs  types.rs
pallets/worker/: Cargo.toml
pallets/worker/src/: blocks_queue.rs  constants.rs  eth.rs  lib.rs  prover.rs  roots.rs  tests.rs  types.rs
primitives/: Cargo.toml
primitives/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: roots.py  start-debug.sh  start.sh  test.sh
