[package]
name = "node-template"
version = "2.0.0"
authors = ["Anonymous"]
description = "A new FRAME-based Substrate node, ready for hacking."
edition = "2018"
license = "Unlicense"
build = "build.rs"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = "node-template"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", features = ["wasmtime"] }
sp-core = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-keystore = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-executor = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", features = ["wasmtime"] }
sc-service = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", features = ["wasmtime"] }
sp-inherents = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-transaction-pool = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-transaction-pool = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-consensus-aura = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-consensus-aura = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-consensus = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-consensus = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-finality-grandpa = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-finality-grandpa = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-client-api = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-runtime = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }

# These dependencies are used for the node template's RPCs
jsonrpc-core = "15.0.0"
sc-rpc = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-api = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-rpc-api = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-blockchain = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-block-builder = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sc-basic-authorship = { version = "0.8.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
substrate-frame-rpc-system = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-transaction-payment-rpc = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
frame-benchmarking-cli = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }

node-template-runtime = { version = "2.0.0", path = "../runtime" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }

[features]
default = []
ocw = []
runtime-benchmarks = [
	"node-template-runtime/runtime-benchmarks",
]
