[package]
name = "node-template-runtime"
version = "2.0.0"
authors = ["Anonymous"]
edition = "2018"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }

pallet-aura = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-balances = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
frame-support = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-grandpa = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-randomness-collective-flip = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-sudo = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
frame-system = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-timestamp = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-transaction-payment = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
frame-executive = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
sp-api = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-block-builder = { git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", default-features = false, version = "2.0.0"}
sp-consensus-aura = { version = "0.8.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-core = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-inherents = { git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", default-features = false, version = "2.0.0"}
sp-offchain = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-runtime = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-session = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-std = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-transaction-pool = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
sp-version = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-transaction-payment-rpc-runtime-api = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }
pallet-indices = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }

# Used for runtime benchmarking
frame-benchmarking = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", optional = true }
frame-system-benchmarking = { version = "2.0.0", default-features = false, git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", optional = true }
hex-literal = { version = "0.3.1", optional = true }

sp-application-crypto = { git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits", default-features = false }
pallet-worker = { version = "2.0.0", default-features = false, path = "../pallets/worker" }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/hicommonwealth/substrate.git", branch = "increase-size-limits" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-indices/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",
	"pallet-worker/std",
]
runtime-benchmarks = [
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"hex-literal",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
]
