[package]
authors = ['Anonymous']
edition = '2018'
name = 'pallet-worker'
version = "2.0.0"
license = "Unlicense"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet worker for defining custom runtime logic."
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false, features = ["derive"] }
serde = { version = "1.0", default-features = false, optional = true }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", default-features = false }
lite-json = { version = "0.1", default-features = false }

[features]
default = ['std']
std = [
	"serde",
	"serde_derive",
	"safe-mix/std",
	"codec/std",
	"sp-application-crypto/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-timestamp/std",
	"lite-json/std",
]
